[package]
name = "coherence"
version = "0.1.0"
authors = ["adamnew123456 <adamnew123456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random = "0.12.2"
bitflags = "1.2.1"
framebuffer = { path = "../framebuffer" }